log
Wed, May 14, 2025 10:42:15 PM: 
 sudoku.c | 85 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 78 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025 10:52:34 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 0/70
241fe1a
Wed, May 14, 2025 11:17:18 PM: 
 sudoku.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 55 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
590fe67
Wed, May 14, 2025 11:19:21 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
cdb3c98
Wed, May 14, 2025 11:29:20 PM: 
 sudoku.c | 31 ++++++++++++++++++++++++-------
 1 file changed, 24 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
0dbff0d
Wed, May 14, 2025 11:30:31 PM: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
5861e81
Wed, May 14, 2025 11:31:34 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
5a1c085
Wed, May 14, 2025 11:32:43 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:217:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
90d335c
Wed, May 14, 2025 11:39:49 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
63503ee
Wed, May 14, 2025 11:42:47 PM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|2
total_score: 45/70
abe0f68
Wed, May 14, 2025 11:56:27 PM: 
 sudoku.c | 25 ++++++++++---------------
 1 file changed, 10 insertions(+), 15 deletions(-)
 tests:  6|2
total_score: 45/70
07e42ad
Thu, May 15, 2025 12:09:15 AM: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  6|2
total_score: 45/70
2112855
Thu, May 15, 2025 12:13:06 AM: 
 sudoku.c | 27 ++++++++-------------------
 1 file changed, 8 insertions(+), 19 deletions(-)
 tests:  6|2
total_score: 45/70
3993fc1
Sat, May 17, 2025 12:39:42 AM: 
 tests:  0|0
ea5112a
Sat, May 17, 2025 12:51:28 AM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
fdef818
Sat, May 17, 2025 12:55:24 AM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
ca3474f
Sat, May 17, 2025 12:55:48 AM: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
0182484
Sat, May 17, 2025 10:40:57 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
test.c: In function 'test_dfs':
test.c:206:19: error: implicit declaration of function 'DFS' [-Werror=implicit-function-declaration]
     Node* final = DFS(initial, &cont);
                   ^~~
test.c:206:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     final = DFS(initial, &cont);
           ^
cc1.exe: all warnings being treated as errors
6f22bdb
Sat, May 17, 2025 10:41:24 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
a789e06
Sat, May 17, 2025 11:29:25 AM: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:218:22: error: comparison between pointer and integer [-Werror]
   while (is_empty(s) != NULL)
                      ^~
cc1.exe: all warnings being treated as errors
af79fa0
